--- a/src/TiceWEB/Views/Home/Curso.cshtml
+++ b/src/TiceWEB/Views/Home/Curso.cshtml
@@ -3,9 +3,9 @@
     <div class="container-fluid">
         <ul class="nav nav-tabs">
             <li class="active"><a asp-controller="Home" asp-action="Curso">Cursos</a></li>
-            <li class="disabled"><a asp-controller="Home" asp-action="Actividad">Actividades</a></li>
-            <li class="disabled"><a asp-controller="Home" asp-action="Tarea">Tareas</a></li>
-            <li class="disabled"><a asp-controller="Home" asp-action="Documento">Documentos</a></li>
+            <li class="disabled"><a onclick="javascript:detActividades()">Actividades</a></li>
+            <li class="disabled"><a>Tareas</a></li>
+            <li class="disabled"><a>Documentos</a></li>
         </ul>
         <h2>Listado de cursos</h2>
         <div class="panel panel-default">
@@ -15,26 +15,25 @@
                         <label>Periodo</label>
                     </div>
                     <div class="col-xs-3 form-group">
-                        <select class="form-control" id="periodo">
+                        <select class="form-control" id="qPeriodo">
                             <option>Seleccione</option>
-                            <option>2015-2</option>
-                            <option>2015-3</option>
-                            <option>2015-4</option>
-                            <option>2015-5</option>
+                            <option value="2015-03">2015-03</option>
+                            <option value="2015-04">2015-04</option>
+                            <option value="2015-05">2015-05</option>
                         </select>
                     </div>
                     <div class="col-xs-1 form-group">
                         <label>Estado</label>
                     </div>
                     <div class="col-xs-3 form-group">
-                        <select class="form-control" id="estado">
+                        <select class="form-control" id="qEstado">
                             <option>Seleccione</option>
-                            <option>Activo</option>
-                            <option>Inactivo</option>
+                            <option value="A">Activo</option>
+                            <option value="I">Inactivo</option>
                         </select>
                     </div>
                     <div class="col-xs-4 form-group">
-                        <button type="button" class="btn btn-default" onclick="CursosxActividad(); return false;">Buscar</button>
+                        <button type="button" class="btn btn-default" id="btnBuscarCurso">Buscar</button>
                     </div>
                 </div>
             </div>
@@ -43,8 +42,8 @@
         <button type="button" class="btn btn-default btn-actividad disabled" data-toggle="modal" data-target="#myModal">
             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Nueva Actividad
         </button>
-
-        <div id="divResult"></div>
+        
+        <input type="hidden" value="" name="cursoSelected" id="cursoSelected"/>
 
         <div class="table-responsive">
             <table id="tblCursos" class="table table-striped">
@@ -60,7 +59,8 @@
                         <th>Acciones</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id="tbodyResult">
+                    <!--
                     <tr>
                         <td>Giacomo</td>
                         <td>Guilizzoni</td>
@@ -131,6 +131,7 @@
                             </button>
                         </td>
                     </tr>
+                    -->
                 </tbody>
             </table>
         </div>
@@ -157,13 +158,13 @@
                             <label>Curso :</label>
                         </div>
                         <div class="col-xs-8 form-group">
+                            <input type="hidden" id="inputActividadCursoCodigo"/>
+                            <input class="form-control" type="text" id="inputActividadCursoNombre" disabled/>
+                            <!--
                             <select class="form-control" id="selectCurso">
                                 <option>Seleccione</option>
-                                <option value="1">Lógica</option>
-                                <option value="2">Aritmética</option>
-                                <option value="3">Algebra</option>
-                                <option value="4">Lenguaje</option>
                             </select>
+                            -->
                         </div>
                         <div class="col-xs-4 form-group">
                             <label>Tipo :</label>
@@ -247,6 +248,7 @@
                             <label>Curso :</label>
                         </div>
                         <div class="col-xs-8 form-group">
+                            <input type="hidden" id="inputCursoCodigo" />
                             <input class="form-control" type="text" id="inputCursoNombre" />
                         </div>
                         <div class="col-xs-4 form-group">
@@ -255,9 +257,8 @@
                         <div class="col-xs-8 form-group">
                             <select class="form-control" id="selectCursoEstado">
                                 <option>Seleccione</option>
-                                <option value="1">Iniciado</option>
-                                <option value="2">En proceso</option>
-                                <option value="3">Terminado</option>
+                                <option value="A">Activo</option>
+                                <option value="I">Inactivo</option>
                             </select>
                         </div>
                         <div class="col-xs-4 form-group">
@@ -278,5 +279,6 @@
 </div>
 
 @section scripts{
+    <script src="~/js/notie.js"></script>
     <script src="~/js/curso.js"></script>
 }
