--- a/src/TiceWEB/Views/Home/Tarea.cshtml
+++ b/src/TiceWEB/Views/Home/Tarea.cshtml
@@ -16,6 +16,11 @@
         <button type="button" class="btn btn-default btn-documento disabled" data-toggle="modal" data-target="#myModal">
             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Agregar Documento
         </button>
+
+        <input type="hidden" value="@ViewData["codigoCurso"]" name="codigoCurso" id="codigoCurso" />
+        <input type="hidden" value="@ViewData["codigoActividad"]" name="codigoActividad" id="codigoActividad" />
+        <input type="hidden" value="" name="tareaSelected" id="tareaSelected" />
+
         <div class="table-responsive">
             <table id="tblTareas" class="table table-striped">
                 <thead>
@@ -28,11 +33,12 @@
                         <th>Avance</th>
                         <th>Asignado</th>
                         <th>Inicio</th>
-                        <th>Fecha Limite</th>
+                        <th>Fecha Fin</th>
                         <th>Acciones</th>
                     </tr>
                 </thead>
                 <tbody>
+                    <!--
                     <tr>
                         <td>Giacomo</td>
                         <td>Guilizzoni</td>
@@ -52,44 +58,7 @@
                             </button>
                         </td>
                     </tr>
-                    <tr>
-                        <td>Guido Jack</td>
-                        <td>Guilizzoni2</td>
-                        <td>3</td>
-                        <td>The Guids</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td>
-                            <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#myModalEditTarea" data-rel="Guilizzoni2">
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                            </button>
-                            <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#myModalDelTarea" data-rel="Guilizzoni2">
-                                <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Mariah</td>
-                        <td>Maclachlan</td>
-                        <td>34</td>
-                        <td>Patata</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td>
-                            <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#myModalEditTarea" data-rel="Maclachlan">
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                            </button>
-                            <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#myModalDelTarea" data-rel="Maclachlan">
-                                <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
-                            </button>
-                        </td>
-                    </tr>
+                    -->
                 </tbody>
             </table>
         </div>
